# CoEvoLoop

./: .env.example  .gitignore  LICENSE  README.md  TERMINOLOGY.md  pyproject.toml  pytest.ini  start_server.sh
backend/: manage.py
backend/annotation/: __init__.py  dto.py  id_generator.py  metadata_manager.py  models.py  serializers.py  services.py  urls.py  urls_v1_filebased.py  views.py  views_v1_filebased.py  views_v2.py
backend/annotation/tests/: test_id_generator.py  test_metadata_manager.py
backend/coevoloop/: apps.py  asgi.py  conversation_views.py  dataset_comparison_views.py  dataset_views.py  env.py  gunicorn_config.py  rl_playground_views.py  synthesis_views.py  urls.py  views_frontend.py  wsgi.py
backend/coevoloop/settings/: base.py  dev.py  local.py  prod.py
backend/core/dialogue_demo/: __init__.py  online_evaluation.py  online_one_model.py  online_user.py
backend/core/llm/: openai_config.py
backend/core/onemodel/: inference.py  utils.py
backend/core/utils/: json_utils.py  llm_utils.py
backend/resource/: messages.jsonl  sysdemo-rl-log-step10.jsonl  user.jsonl
backend/storage/: __init__.py  benchmark_storage.py  conversation_storage.py  dataset_storage.py  eval_result_storage.py  eval_task_poller.py  eval_task_storage.py  rllog_storage.py  synthesis_storage.py
backend/synthesis/: __init__.py  dialogue_generator.py  evaluator.py  portrait_extractor.py  task_executor.py
config/: models.json
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  index.css  test-user-data.ts
viewer/src/lib/: api.ts  (+12 more)
(+101 files in other folders)
